--- a/css/st.css
+++ b/css/st.css
@@ -73,7 +73,7 @@ html{
   }
   #home::before{
     content: "";
-    background: url('/img/tomato.png') no-repeat center center/cover;
+    background: url('../img/tomato.png') no-repeat center center/cover;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -125,7 +125,7 @@ html{
 #client-section::before{
   content: "";
   position: absolute;
-  background: url('/img/pexels-ella-olsson-1640777.jpg');
+  background: url('../img/pexels-ella-olsson-1640777.jpg');
   width: 100%;
   height: 500px;
   z-index: -1;
@@ -153,7 +153,7 @@ html{
   height: 100%;
   z-index: -1;
   opacity: 0.7;
-  background: url('/img/contact.png') no-repeat center center/cover;
+  background: url('../img/contact.png') no-repeat center center/cover;
 }
 #contact-box{
   display: flex;
